--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
  <div class="top card">
     <a class="email" href="mailto:{{site.email}}">{{site.email}}</a>
-    <p class="description">{{ site.description }}</p>
+    <!-- <p class="description">{{ site.description }}</p> -->
     <a href="about" class="btn">Read More</a>
   </div>
   <div class="posts card">
